feat(integration): unify Slack mentor integration